--- a/css/styles.css
+++ b/css/styles.css
@@ -5,18 +5,12 @@
     
 }
 body{
-   
-   padding: 2rem;
    font-family: sans-serif;
-   width: 100vw;
-   height: 100vh;
-    
-
 }
 
 header{
     height: 40vh;
-    width: 90vw;
+    width: 100%;
     position: relative;
     margin-top: 50px;
     padding: 1rem;
@@ -46,13 +40,52 @@ nav>a{
     text-decoration: none;
     margin: 10px;
     background-color: cyan;
-    border: 2px, solid, black;
+    border: 2px solid black;
     border-radius: 25%;
 
 }
 
 #banner{
     display: block;
-    width: 85%;
+    width: 100%;
     height: 100%;
+}
+
+#home, #about, #contact{
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    
+
+}
+
+.subtitle{
+    background-color: black;
+    color: white;
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.imagen{
+    width: 200px;
+}
+
+.content1{
+    margin-left: 25%;
+    margin-bottom: 1rem;
+}
+
+.content2{
+    position: absolute;
+    top: 10%;
+    padding: 2rem;
+}
+figure{
+    margin-bottom: 0.5rem;
+}
+figcaption{
+    text-align: center;
+    padding: 0.5rem 0 0.5rem 0;
+    font-weight: bold;
 }
