--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,13 @@
     box-sizing: border-box;
     font-family: sans-serif;
 }
+body{
+    background-color: rgb(160, 155, 155);
+}
+
+/*header*/
+
 header{
-    width: 100vw;
     display: flex;
     /*background-color: rgb(29, 136, 97);*/
     background-color: black;
@@ -13,7 +18,7 @@ header{
     align-items: end;
 }
 .logo{
-    width: 125px;
+    width: 100px;
 }
 h1{
     color:rgb(255, 225, 0);
@@ -22,18 +27,63 @@ h1{
 }
 nav{
     display: flex;
-    justify-content: flex-end;
+    justify-content: end;
     flex-wrap: wrap;
-    
-    
 }
 nav>a{
-    margin: .5rem;
+    margin: .75rem;
     font-size: 16px;
-    padding: 10px;
+    padding: .5rem;
     background-color: rgba(20, 20, 195, 0.663);
     text-decoration: none;
     color: white;
     border-radius: 15%;
 }
+a[href="#"]{
+    background-color: rgb(29, 136, 97);
+    color: white;
+}
 
+/*Main*/
+
+.subtitle{
+    background-color: green;
+    text-align: center;
+    padding: .5rem;
+}
+.banner{
+    width: 100%;
+    height: 45vh;
+    object-fit: cover;
+    object-position: 0% 30%;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 2rem;
+    height: 35vh;
+}
+.content{
+    margin-bottom: 15px;
+}
+
+.images{
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 1rem;
+    
+}
+.image{
+    width: 300px;
+    margin: 10px;
+    
+}
+footer{
+    background-color: black;
+    color:rgb(255, 225, 0);
+    padding: .5rem;
+}
