--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,7 @@ a[href="#"]{
     background-color: green;
     text-align: center;
     padding: .5rem;
+    border: 2px solid black;
 }
 .banner{
     width: 100%;
@@ -157,4 +158,84 @@ footer{
     background-color: black;
     color:rgb(255, 225, 0);
     padding: .5rem;
+}
+/*form*/
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+    margin: 1rem auto;
+    background-color: rgba(255, 255, 255, 0.863);
+    width: 70%;
+    font-size: 1.5rem;
+    border: 2px solid black;
+    
+}
+fieldset{
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    width: 100%;
+}
+input{
+    margin: 0 .5rem;
+}
+input[type="text"], input[type="date"]{
+    width:400px;
+    font-size: 1.5rem;
+}
+fieldset>label, fieldset>p{
+    margin: 0.5rem 0;
+}
+fieldset>p{
+    flex-direction: row;
+    justify-content: space-around;
+}
+fieldset>p>label{
+    margin: 0 1rem;
+    
+}
+form>fieldset>h3{
+    margin-bottom: 1rem;
+    text-align: center;
+}
+select{
+    font-size: 1.5rem;
+    margin:1rem;
+}
+.check{
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.check>label{
+    width: 50%;
+}
+fieldset>h5{
+    width:100%;
+    margin-bottom: 1rem;
+}
+.agreement>p{
+    font-style: italic;
+    padding:1rem;
+}
+input[type="submit"]{
+    padding: .5rem;
+    margin:1rem;
+    
+}
+form>fieldset>section{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 1rem;
+}
+form>fieldset>section>h5{
+    width: 100%;
+}
+form>fieldset>section>article{
+text-align: center;
+margin: 2rem 1rem;
 }
