--- a/css/styles.css
+++ b/css/styles.css
@@ -93,6 +93,7 @@ a[href="#"]{
     font-size: 1.5rem;
     border: 2px solid black;
     border-radius: 5%;
+    background-color:rgba(255, 255, 255, 0.863);
 }
 .rules_content p{
     margin-bottom: 2rem;
@@ -125,9 +126,12 @@ table{
 .game_content{
     display: flex;
     flex-direction: column;
-    width: 40%;
+    width: 60%;
     align-items: center;
     justify-content: center;
+    background-color:rgba(255, 255, 255, 0.863);
+    padding: 1rem;
+    border: 2px solid black;
 }
 .game_content>h3, .game_content>p{
     width: 100%;
@@ -172,7 +176,9 @@ form{
     width: 70%;
     font-size: 1.5rem;
     border: 2px solid black;
-    
+}
+h3{
+    margin-bottom: 30px;
 }
 fieldset{
     display: flex;
@@ -222,9 +228,12 @@ fieldset>h5{
     padding:1rem;
 }
 input[type="submit"]{
-    padding: .5rem;
+    padding: 1rem 2rem;
     margin:1rem;
-    
+    border:1px solid black;
+}
+input[type="submit"]:hover{
+    background-color: yellow;
 }
 form>fieldset>section{
     display: flex;
@@ -236,6 +245,9 @@ form>fieldset>section>h5{
     width: 100%;
 }
 form>fieldset>section>article{
-text-align: center;
-margin: 2rem 1rem;
+    text-align: center;
+    margin: 2rem 1rem;
+}
+.map_location{
+    margin-bottom: 1rem;
 }
