se hicieron pequeños cambios en el estilo de algunas secciones

--- a/css/styles.css
+++ b/css/styles.css
@@ -189,9 +189,6 @@ fieldset{
 input{
     margin: 0 .5rem;
 }
-input[type="text"]{
-    width: 100%;
-}
 input[type="text"], input[type="date"]{
     width:400px;
     font-size: 1.5rem;
@@ -256,4 +253,7 @@ form>fieldset>section>article{
 }
 label{
     font-family: 'Tahoma';
+}
+fieldset>p>label{
+    font-style: italic;
 }
